--- a/bin/Assignment.dll.config
+++ b/bin/Assignment.dll.config
@@ -14,7 +14,8 @@
 	</customErrors>
 	  
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
+	<pages validateRequest="false" />
   </system.web>
 	
   <system.codedom>
@@ -23,8 +24,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+	<connectionStrings>
+		<add name="HRDBConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HRDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	
-  <runtime>
+  <!--<runtime>
 	
       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 	
@@ -38,5 +43,5 @@
 	
       </assemblyBinding>
 	
-  </runtime>
+  </runtime>-->
 </configuration>
