--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -61,6 +61,7 @@ jobs:
     #    uses a compiled language
     - if: matrix.language == 'csharp'
       run: | 
+        name csharp
         
 
     - name: Perform CodeQL Analysis
