--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
 	<pages validateRequest="false" />
+	<httpCookies domain="String" httpOnlyCookies="true" requireSSL="true" />
   </system.web>
 	
   <system.codedom>
