--- a/Web.config
+++ b/Web.config
@@ -6,18 +6,26 @@
 <configuration>
 	
   <system.web>
-	<sessionState mode="InProc" timeout="1" />
+	<sessionState mode="InProc" timeout="5" />
 	<customErrors defaultRedirect="~/ErrorPages/GenericError.html" mode="On">
 		<error statusCode="500" redirect="~/ErrorPages/HTTP500.html" />
 		<error statusCode="404" redirect="~/ErrorPages/HTTP404.html" />
 		<error statusCode="403" redirect="~/ErrorPages/HTTP403.html" />
 	</customErrors>
 	  
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
-	<pages validateRequest="false" />
-	<httpCookies domain="String" httpOnlyCookies="true" requireSSL="true" />
+	<pages enableSessionState="true" validateRequest="false" />
   </system.web>
+
+	<system.webServer>
+		<httpProtocol>
+			<customHeaders>
+				<remove name="X-Powered-By"/>
+				<add name="X-Frame-Options" value="SAMEORIGIN" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
 	
   <system.codedom>
     <compilers>
@@ -27,7 +35,7 @@
   </system.codedom>
 
 	<connectionStrings>
-		<add name="HRDBConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HRDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+		<add name="HRDBConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HRDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
   <!--<runtime>
