--- a/Web.config
+++ b/Web.config
@@ -1,56 +1,61 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	
   <system.web>
-	<sessionState mode="InProc" timeout="5" />
-	<customErrors defaultRedirect="~/ErrorPages/GenericError.html" mode="On">
-		<error statusCode="500" redirect="~/ErrorPages/HTTP500.html" />
-		<error statusCode="404" redirect="~/ErrorPages/HTTP404.html" />
-		<error statusCode="403" redirect="~/ErrorPages/HTTP403.html" />
-	</customErrors>
-	  
-    <compilation targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
-	<pages enableSessionState="true" validateRequest="false" />
+    <sessionState mode="InProc" timeout="2"/>
+    <customErrors defaultRedirect="~/ErrorPages/GenericError.html" mode="On">
+      <error statusCode="500" redirect="~/ErrorPages/HTTP500.html"/>
+      <error statusCode="404" redirect="~/ErrorPages/HTTP404.html"/>
+      <error statusCode="403" redirect="~/ErrorPages/HTTP403.html"/>
+    </customErrors>
+    <compilation targetFramework="4.7.2" debug="false"/>
+    <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0"/>
+    <pages enableSessionState="true" validateRequest="false"/>
   </system.web>
 
-	<system.webServer>
-		<httpProtocol>
-			<customHeaders>
-				<remove name="X-Powered-By"/>
-				<add name="X-Frame-Options" value="SAMEORIGIN" />
-			</customHeaders>
-		</httpProtocol>
-	</system.webServer>
+  <location path="~/ImageUploads">
+	<system.web>
+	  <authorization>
+		<deny roles="*"/>
+	  </authorization>
+	</system.web>
+  </location>
+	
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By"/>
+        <add name="X-Frame-Options" value="SAMEORIGIN"/>
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 	
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-
-	<connectionStrings>
-		<add name="HRDBConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HRDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
 	
+  <connectionStrings>
+    <add name="HRDBConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=HRDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <!--<runtime>
-	
+  
       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-	
+  
           <dependentAssembly>
-	
+  
               <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	
+  
               <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
-	
+  
           </dependentAssembly>
-	
+  
       </assemblyBinding>
-	
+  
   </runtime>-->
 </configuration>
