--- a/bin/Assignment.dll.config
+++ b/bin/Assignment.dll.config
@@ -6,12 +6,12 @@
 <configuration>
   <system.web>
     <sessionState mode="InProc" timeout="2"/>
-    <customErrors defaultRedirect="~/ErrorPages/GenericError.html" mode="On">
+    <!--<customErrors defaultRedirect="~/ErrorPages/GenericError.html" mode="On">
       <error statusCode="500" redirect="~/ErrorPages/HTTP500.html"/>
       <error statusCode="404" redirect="~/ErrorPages/HTTP404.html"/>
       <error statusCode="403" redirect="~/ErrorPages/HTTP403.html"/>
-    </customErrors>
-    <compilation targetFramework="4.7.2" debug="true"/>
+    </customErrors>-->
+    <compilation targetFramework="4.7.2" debug="false"/>
     <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0"/>
     <pages enableSessionState="true" validateRequest="false"/>
   </system.web>
